aws-gateway-controller/internet-access-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-inventory-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app: product-inventory
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
