aws-gateway-controller/nlb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-inventory-nlb
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  selector:
    app: product-inventory
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
