aws-gateway-controller/simple-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-inventory-internet
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: product-inventory
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
